Controllers para los pedidos

--- a/WillyNet.YoDono.Presentation.WebApi/appsettings.json
+++ b/WillyNet.YoDono.Presentation.WebApi/appsettings.json
@@ -9,5 +9,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "JWTSettings": {
+    "Key": "C1CF4B7DC4C4175B6618DE4F55CA4",
+    "Issuer": "Willy.Net",
+    "Audience": "Willy.Net.Galeano",
+    "DurationInMinutes": 60
+  },
   "AllowedHosts": "*"
 }
